[DOC] Update for RELEASE SNAPSHOT 2016-08-16.

--- a/source/ChangeLog
+++ b/source/ChangeLog
@@ -5,9 +5,10 @@
   * [OSD][MOVIE_SAVER] Maybe correctness frame(s) counting with 60fps ヽ(=´▽=)ﾉ
   * [MOVIE_SAVER] Fix sometimes crashing when stop to save movie.
   * [PX7/MOVIE_LOADER] Sound Laser Disc, but not be smooth.
-  * Built with GIT 171d3309339e4b941d2bd13a3dd0c11840cfeb62 (or later) .
+  * [MOVIE_SAVER][PC8801][PC9801] Adjust sound frequency when OVERRIDE_48000Hz , still choppy.
+  * Built with GIT 3f4c809912dc92cdeb34d8ecdebe0087aa7f37b3 (or later) .
  
--- Aug 15, 2016 23:35:43 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
+-- Aug 16, 2016 02:40:55 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
 
 * SNAPSHOT August 09, 2016
   * Upstream 2016-04-13
