[DOC] Update to SNAPSHOT 2016-09-09.

--- a/source/ChangeLog
+++ b/source/ChangeLog
@@ -1,5 +1,24 @@
 *** If you want to know full changes, please read 000_gitlog.txt and history.txt. ***
 
+* SNAPSHOT September 09, 2016
+  * Upstream 2016-04-13
+  * [LOGGER] Add extend logger.
+  * [LOGGER/Qt] Rename agar_logger.[cpp|h] to csp_logger.[cpp|h] .
+  * [VM] Ready to enable log per device.
+  * [VM] Update emu->out_debug_log to [DEVICE]->out_debug_log .
+  * [UI/Qt] Add log viewer window.
+  * [Qt/EMUTHREAD] Move commonly blocks to gui/ .
+  * [Qt/KEY] Use queue for keyin/out.
+  * [VM/OSD] Add socket (networking) featuers, but still not test (；´Д｀)
+  * [VM/FM77AV] MB61VH010 : Faster drawing lines.
+  * [VM/FM7] MAINIO: Comment out logging around FIRQ, temporally.
+  * [OSD/KEYBOARD] Fix handling around SHIFT for some machines(i.e. PC8801).
+  * [MOVIE_SAVER] Use SIMD to transfer a picture OSD(VM)->MOVIE_SAVER .
+  * [DOC] Update updtream's URL, moved to takeda-toshiya.my.coocan.jp .
+  * Built with GIT 771e6376ee9da1f2d466381d834fa40bc2310f60 (or later).
+
+-- Sep 09, 2016 01:02:51 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
+
 * SNAPSHOT August 19, 2016
   * Upstream 2016-04-13
   * [WIN32] Replace libICU to homebrew, fix not starting.
