--- a/source/ChangeLog
+++ b/source/ChangeLog
@@ -1,5 +1,23 @@
 *** If you want to know full changes, please read 000_gitlog.txt and history.txt. ***
 
+* SNAPSHOT September 23, 2016
+  * Upstream 2016-04-13
+  * [DOC] Translated some documents written in Japanese only to English using Google-Translate, still not enaugh to be corrected.
+  * [Qt/WIN32] Fix crash on startup (maybe true) caused by (´∀｀)＜ぬるぽ　ヽ(・∀・)ノ┌┛ガッΣ(ノ｀Д´)ノ
+  * [VM] Add original name and role to all device and VM components.
+  * [VM/FM7] JOYSTICK: Fix not redirect triggers.
+  * [VM/FM7][MB8877/DISK] Workaround for RIGLAS/FM-7. Perhaps, below have side-effect, add special-disk to RIGLAS FM.
+  ** Don't "NOT READY" even stopping motor.
+  ** Transfer even stopping motor.
+  * [EVENT] Remove logging on cancel event.
+  * [Qt/Debugger] Not hang-up when Opening debugger and exit emu{foo}. This is temporally workaround.
+  * [Qt/Debugger] Don't close with close button, this is temporally workaround.
+  * [UI/Qt] Fix selecting printers.
+  * [VM/PC9801] Add prepair of using ITF ROM, this is sitll only preparation.
+  * Built with GIT 8cdb1dbebf95d7371e514886c23edc6c9401848a (or later).
+
+-- Sep 23, 2016 19:48:12 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
+
 * SNAPSHOT September 09, 2016
   * Upstream 2016-04-13
   * [LOGGER] Add extend logger.
