--- a/source/history.txt
+++ b/source/history.txt
@@ -1,3 +1,16 @@
+12/31/2016
+
+[COLECOVISION/KEYBOARD] fix not to raise irq when joystick is pressed
+[COLECOVISION/KEYBOARD] fix joystick/tenkey inputs
+[COLECOVISION/KEYBOARD] fix to save/load tenky enabled status
+[SC3000/MEMORY] support 32KB+16KB or 128KB ROM carts
+
+
+12/30/2016
+
+[COLECOVISION] support COLECO ColecoVision (thanks Mr.tanam)
+
+
 12/29/2016
 
 [RESOURCE] recompress png files in https://tinypng.com/
