--- a/source/ChangeLog
+++ b/source/ChangeLog
@@ -1,5 +1,20 @@
 *** If you want to know full changes, please read 000_gitlog.txt and history.txt. ***
 
+* SNAPSHOT January 24, 2017
+  * Upstream 2016-12-31
+  * [UI/Qt] Add tooltips to menu entries mostly.
+  * [UI/Qt] Add Japanese translations to menu entries mostly.
+  * [SOUND] Add "Strict Rendering" entry to sound menu, for PCM1BIT device.
+  * [VM/FM7] Fix crash without connecting FDDs.
+  * [VM/UPD7752] Fix (´∀｀)＜ぬるぽ sometimes.
+  * [DRAW/FM7] Fix wrong screen aspect on VMs without variable lines.
+  * [Build/Linux] Fix scripts.
+  * [Build/Linux] Fix crash built with gcc-5 (or earlier). Fixed for Ubuntu16.04LTS.
+  * [Build/Linux] Separate builds both Debian/sid and Ubuntu/16.04LTS (expects to work with Debian/stable).
+  * Built with  or newer.
+
+-- Jan 24, 2017 01:06:26 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
+
 * SNAPSHOT January 06, 2017
   * Upstream 2016-12-31
   * Add Coleco Colecovision and SHARP SM-B-80TE (from upstreeam).
