--- a/source/ChangeLog
+++ b/source/ChangeLog
@@ -1,5 +1,19 @@
 *** If you want to know full changes, please read 000_gitlog.txt and history.txt. ***
 
+* SNAPSHOT January 30, 2017
+  * Upstream 2016-12-31
+  * [VM/SOUND] Fix problems voice with PCM (at least MSX and FM-7(Reviver)).
+               See http://hanabi.2ch.net/test/read.cgi/i4004/1483504365/37 .
+. * [VM/MB8877] Fix accessing 2D disk from 2DD mode drive (not 2D mode).
+                Fixed booting issue of REVIVER for FM-7/77/AV with FM77AV40/EX/SX.
+  * [Draw/Qt] Fix wrong aspect when using variable screen size.i.e.)emufm7/emufm77av40ex.
+  * [UI/OpenGL] Add selection of draw infrastracture; OpenGLv3(MAIN) and OpenGLv2 (and OpenGLv3.2(Core): Still not implemented).
+  * [Qt/OpenGL] Fix backgrounds not display at one-board-computer drawing with OpenGLv2.
+  * [Qt/LOG] Enable syslog *truely*.
+  * Built with 5e58321d587a74979c7691d280a4123dba16f68c or newer.
+
+-- Jan 30, 2017 01:41:09 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
+
 * SNAPSHOT January 24, 2017
   * Upstream 2016-12-31
   * [UI/Qt] Add tooltips to menu entries mostly.
