--- a/source/ChangeLog
+++ b/source/ChangeLog
@@ -1,5 +1,58 @@
 *** If you want to know full changes, please read 000_gitlog.txt and history.txt. ***
 
+* SNAPSHOT Feb 10 2018
+  * Upstream 2017-12-27 .
+  * [CONFIG] IMPORTANT: Now, "~/emufoo/" moved to "~/CommonSourceCodeProject/emufoo/" .
+             Please move settings to here.
+  * [CONFIG] IMPORTANT: Now, "~/emufoo/foo.ini" has moved to "~/.config/CommonSourceCodeProject/emufoo/" (or "~/CommonSourceCodeProject/emufoo/ at Windows").  
+             Please move ini and scancode.conf to new place.
+  * [VM/MB8877] Enable to boot FLEX/FM-8.
+                Thanks to https://matsuri.5ch.net/test/read.cgi/i4004/1483504365/800- .
+  * [UI/Qt] Add option: Emulate cursor keys as "2468" or "1235".
+  * [UI/KEYBOARD] Add option, "Numpad's Enter is Fullkey's".Useful for FM-77AV series, etc.
+  * [UI/VM] MB8877/T3444/uPD765A: Add ON/OFF debug logging for FDCs.
+  * [Qt/EMU] Seriarize queueing both KEY_DOWN and KEY_UP.
+             Expect to fix  key-in issues with slower host machine.
+	     See https://matsuri.5ch.net/test/read.cgi/i4004/1483504365/841 .
+  * [UI/Qt] BUG: Fix crash with BOOT_MODEs >= 8.
+  * [UI/Qt] FM7: Extend boot menu.
+  * [UI/KEYBOARD] Update VM table.
+  * [UI/KEYBOARD] Fix load/save sequence of scancode.cfg.
+  * [UI/Qt] Update translate for menu.Split section per menu-bar-entry.
+  * [MENU/Qt] DISK: Fix not affect of some entries:"Correct disk timing","Ignore CRC error" and "Immediate transfer".
+  * [Draw/OpenGL] FM77AV: Fix blinking with some situation.
+  * [VM/MC6809] Fix around CWAI with interrupts.
+  * [VM/MC6809] Make set/reset E flag at interrupt.
+  * [VM/MC6809] More accurate emulation(maybe).
+  * [VM/MC6809] Fix clock count with some situation, FM-8/7/77/AV don't need dummycpu.
+  * [VM/FM7] Remove DUMMY CPU.Reduce host-cpu usage a lot.
+             Related to commit a4e1a7cfef59e08f31675c6608871068d3f2c4ef.
+  * [EMU/FM7] emu.cpp : No longer use hack with some VMs.
+  * [VM/FM7] KEYBOARD: Keep BREAK key when special reset (hot start).
+  * [VM/FM7] MAINIO: Reduce hitting PCM1BIT:: when not sound buzzer.
+  * [VM/FM7] DISK: Fix RPM value of 2D/2DD drive to 300rpm.
+  * [VM/FM7] Read some (bulk) roms for FM-8/7/NEW7/77.This is WORK-IN-PROGRESS.
+  * [VM/FM8/FM77] Add delay FIRQ/NMI from 2HD/SFD FDC.This is temporally implement.
+  * [VM/FM8] MAINIO: Move FM-8 specified features to FM8_MAINIO:: .
+  * [VM/FM77] Add initial support of 2HD (for FM-77).
+  * [VM/FM77] Fix access around BOOT-RAM.Thanks to Ryu Takegami.
+  * [VM/FM77] Extra memories should start $00000, not $10000.Thanks to Ryu Takegami.
+  * [VM/FM77] Fix wrong answer at $FD04.Thanks to Ryu Takegami.
+  * [VM/FM77AV] DISPLAY: Separate event process around VSYNC/HSYNC.
+  * [VM/FM77AV40] Fix FTBFS with Fedora linux.
+  * [VM/FM77AV40EX] Do not effect offset registers to VRAM-ACTIVE-BLOCK 1.Thanks to Ryu Takegami.
+  * [VM/MB8877] No need to hack with PSY-O-BLADE for FM77AV.This is test delete.
+  * [VM/MB8877] Force down DRQ when LOST-DATA happens.
+  * [VM/MB8877] Fix not read status data at the endof SEEK and verifying.
+  * [VM/MB8877] Update structure of MB8877->fdc.
+  * [VM/DISK] Fix default value ignore_crc_error and correct_disk_timing (mostly "to false").
+  * [DOC] Add README.md (written in Japanese) and README.en.md (written in English) for GITHUB's cover page.
+  * Special thanks to Ryu Takegami, to assist debugging FM-7/77/AV/40/EX .
+  * Built with commit a14677dfb396ece914c338861523aa903aad1740 or later.
+
+-- Feb 10, 2018 18:26:15 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
+
+
 * SNAPSHOT Jan 19 2018
   * Upstream 2017-12-27 .
   * [EMU] Add set_vm_screen_lines(int lines) to notify changing vertical resolution
