--- a/source/history.txt
+++ b/source/history.txt
@@ -1,3 +1,23 @@
+3/1/2018
+
+[PC98RL] support NEC PC-98RL
+[PC9801/DISPLAY] update for hireso mode
+[PC9801/DISPLAY] fix for the case gdc scroll parameters are invalid
+[PC9801/MEMBUS] update for hireso mode
+[PC9801/MEMBUS] support outport 053Dh
+[PC9801/MEMBUS] move memory map routine from VM class to MEMBUS class
+
+
+2/28/2018
+
+[VM/I286] fix not to clear cycles in reset()
+[VM/I386] fix not to clear cycles in reset()
+[VM/I386] improve mov_r16_rm16 instruction to check limit
+[VM/I386] fix debugger
+
+[PC9801RA] support NEC PC-9801RA
+
+
 2/27/2018
 
 [VM/I8237] fix bank register and inc mask register
